force-app/main/default/objects/Security_Skill__c.object
<CustomObject>
    <description>Security Skills can be configured to help you understand your users skills.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Image_Path__c</fullName>
        <description>The image path designed to pull the logo from the static resource for images.</description>
        <label>Image Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(&apos;/resource/&apos;&amp;Image_Path__c,&quot;Image not found&quot;, -1, 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Point_Value__c</fullName>
        <label>Point Value</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skill_Level__c</fullName>
        <label>Skill Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beginner</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Certification</fullName>
                </value>
                <value>
                    <fullName>Trailhead Badge</fullName>
                </value>
                <value>
                    <fullName>Training Course</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Security Skill</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Security Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Security Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>